# docling-pp-ocrv6

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.agent/rules/: python.mdc
.github/workflows/: llm-doc-update-trigger.yml  main.yml  publish.yml
src/docling_pp_ocrv6/: __init__.py  model.py  options.py  plugin.py
tests/: conftest.py  test_e2e.py  test_model.py  test_options.py  test_plugin.py
